--- a/configure.ac
+++ b/configure.ac
@@ -25,7 +25,7 @@ src/ui-wx/Makefile
 AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_CXX
-AC_PROG_RANLIB
+AC_PROG_LIBTOOL
 
 # Checks for libraries.
 # Pthreads are absolutely necessary
@@ -197,6 +197,40 @@ AC_SUBST(UI_LIBS)
 AC_SUBST(UI_LDFLAGS)
 AC_SUBST(UI_DIR)
 AM_CONDITIONAL(UI_CXX, test "x$UI_CXX" = "xtrue")
+
+
+# Check if we should enable the Gaim plugin
+AC_ARG_ENABLE(gaim-plugin,
+[  --enable-gaim-plugin
+                enable the Gaim Plugin - must have Gaim 1.2.0 or higher development libraries],
+[
+
+GAIM_PLUGIN=yes
+
+# Check for Gaim
+PKG_CHECK_MODULES(GAIM,
+[gaim >= 1.2.0 gaim < 2.0.0],
+[
+        AC_DEFINE(HAVE_GAIM, 1, [Define if gaim-devel is available.])
+],
+[
+AC_MSG_ERROR([Gaim development libraries not found.])
+])
+
+AC_SUBST(GAIM_CFLAGS)
+AC_SUBST(GAIM_LIBS)
+
+], [GAIM_PLUGIN=no], [GAIM_PLUGIN=no])
+
+if test "x$GAIM_PLUGIN" = "xyes"
+then
+        GAIM_PLUGIN_DIR=gaim-plugin
+else
+        GAIM_PLUGIN_DIR=
+fi
+
+AC_SUBST(GAIM_PLUGIN_DIR)
+AM_CONDITIONAL(GAIM_PLUGIN, test "x$GAIM_PLUGIN" = "xyes")
 
 
 # Check if we should enable the hub
