--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,3 +65,26 @@ directnethub_DEPENDENCIES=@HUB_DIR@/libhub.a @ENC_DIR@/libenc.a
 directnethub_LDADD=@PTHREAD_LIBS@ @HUB_DIR@/libhub.a @ENC_DIR@/libenc.a @ENC_LIBS@
 
 endif
+
+
+if GAIM_PLUGIN
+
+gaimdir=$(libdir)/gaim
+
+gaim_LTLIBRARIES=libdirectnet_gaim.la
+
+libdirectnet_gaim_la_SOURCES=chat.c \
+client.c \
+connection.c \
+directnet.c \
+gaim-plugin.c \
+hash.c \
+lock.c \
+server.c
+
+libdirectnet_gaim_la_CFLAGS=@PTHREAD_CFLAGS@ @ENC_CFLAGS@ @GAIM_CFLAGS@ -DGAIM_PLUGIN -DGAIM_PLUGINS
+libdirectnet_gaim_la_LDFLAGS=@PTHREAD_CFLAGS@ @ENC_LDFLAGS@ -module -avoid-version -Wl,--export-dynamic
+libdirectnet_gaim_la_DEPENDENCIES=@ENC_DIR@/libenc.a
+libdirectnet_gaim_la_LIBADD=@PTHREAD_LIBS@ @ENC_DIR@/libenc.a @ENC_LIBS@ @GAIM_LIBS@
+
+endif
